--- a/CoffeeCraftJava/app/src/main/AndroidManifest.xml
+++ b/CoffeeCraftJava/app/src/main/AndroidManifest.xml
@@ -23,7 +23,12 @@
         </activity>
         <activity
             android:name=".mainActivity"
-            android:exported="false"/>
+            android:exported="false"
+        />
+        <activity
+            android:name=".newAccountActivity"
+            android:exported="false"
+        />
     </application>
 
 </manifest>
