--- a/CoffeeCraftJava/app/src/main/AndroidManifest.xml
+++ b/CoffeeCraftJava/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".newAccountActivity"
             android:exported="false"
         />
+        <activity
+            android:name=".birthAndCountryActivity"
+            android:exported="false"
+        />
     </application>
 
 </manifest>
