--- a/CoffeeCraftJava/app/build.gradle
+++ b/CoffeeCraftJava/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
 
+    implementation libs.commons.csv
     implementation libs.appcompat
     implementation libs.material
     testImplementation libs.junit
