--- a/CoffeeCraftJava/gradle/libs.versions.toml
+++ b/CoffeeCraftJava/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.3.0"
+commonsCsv = "1.9.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -9,6 +10,7 @@ okhttp = "4.9.1"
 retrofit = "2.9.0"
 
 [libraries]
+commons-csv = { module = "org.apache.commons:commons-csv", version.ref = "commonsCsv" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
