--- a/CoffeeCraftJava/app/src/main/AndroidManifest.xml
+++ b/CoffeeCraftJava/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".mainActivity"
+            android:name=".MainActivity"
             android:exported="false"
         />
         <activity
