--- a/CoffeeCraftJava/app/src/main/AndroidManifest.xml
+++ b/CoffeeCraftJava/app/src/main/AndroidManifest.xml
@@ -37,5 +37,8 @@
         <activity
             android:name=".UserInfoActivity"
             android:exported="false" />
+        <activity
+            android:name=".CoffeeSuggestionActivity"
+            android:exported="false" />
     </application>
 </manifest>
